--- a/index.html
+++ b/index.html
@@ -2,41 +2,56 @@
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8">
-  <title>Psicólogo(a) – Atendimento Online e Presencial</title>
-  <meta name="description" content="Atendimento psicológico online e presencial. Psicoterapia com ética, sigilo e acolhimento.">
+  <title>Psicólogo(a) em [Cidade] | Atendimento Online e Presencial</title>
+  <meta name="description" content="Psicólogo(a) em [Cidade]. Atendimento psicológico online e presencial com ética, sigilo e acolhimento. Agende sua consulta.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
 <header>
-  <h1>Dr(a). Seu Nome</h1>
+  <h1>Dr(a). Seu Nome Completo</h1>
   <p>Psicólogo(a) – CRP 00/00000</p>
-  <a href="#contato" class="botao">Agendar consulta</a>
+  <a href="https://wa.me/55SEUNUMERO" class="botao" target="_blank">Agendar pelo WhatsApp</a>
 </header>
 
 <section>
-  <h2>Sobre</h2>
-  <p>Sou psicólogo(a) formado(a), com atuação em psicoterapia e compromisso com o cuidado emocional, ética e sigilo profissional.</p>
+  <h2>Sobre o atendimento</h2>
+  <p>
+    Sou psicólogo(a), com atuação em atendimento psicológico online e presencial.
+    O trabalho é fundamentado na ética profissional, no sigilo e no acolhimento,
+    respeitando a singularidade de cada pessoa.
+  </p>
 </section>
 
 <section>
-  <h2>Atendimentos</h2>
+  <h2>Serviços</h2>
   <ul>
     <li>Psicoterapia individual</li>
-    <li>Atendimento online</li>
-    <li>Orientação emocional</li>
+    <li>Atendimento psicológico online</li>
+    <li>Atendimento presencial em [Cidade]</li>
+    <li>Acolhimento emocional</li>
   </ul>
+</section>
+
+<section>
+  <h2>Como funciona</h2>
+  <p>
+    O atendimento psicológico é um espaço seguro para reflexão, autoconhecimento
+    e cuidado com a saúde mental. As sessões seguem as normas do Conselho Federal
+    de Psicologia.
+  </p>
 </section>
 
 <section id="contato">
   <h2>Contato</h2>
-  <p>WhatsApp: (00) 00000-0000</p>
+  <p>WhatsApp: <a href="https://wa.me/55SEUNUMERO" target="_blank">(00) 00000-0000</a></p>
   <p>Email: contato@email.com</p>
 </section>
 
 <footer>
-  <p>© 2026 – Dr(a). Seu Nome</p>
+  <p>© 2026 – Dr(a). Seu Nome Completo | CRP 00/00000</p>
+  <p><a href="politica-de-privacidade.html">Política de Privacidade</a></p>
 </footer>
 
 </body>
