--- a/index.html
+++ b/index.html
@@ -2,17 +2,17 @@
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8">
-  <title>Psicólogo(a) em [Cidade] | Atendimento Online e Presencial</title>
-  <meta name="description" content="Psicólogo(a) em [Cidade]. Atendimento psicológico online e presencial com ética, sigilo e acolhimento. Agende sua consulta.">
+  <title>Psicólogo(a) em [Foz do Iguaçu-PR] | Atendimento Online e Presencial</title>
+  <meta name="description" content="Psicólogo(a) em [Foz do Iguaçu]. Atendimento psicológico online e presencial com ética, sigilo e acolhimento. Agende sua consulta.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
 <header>
-  <h1>Dr(a). Seu Nome Completo</h1>
-  <p>Psicólogo(a) – CRP 00/00000</p>
-  <a href="https://wa.me/55SEUNUMERO" class="botao" target="_blank">Agendar pelo WhatsApp</a>
+  <h1>Dr(a). Willian Valencio Silvestre</h1>
+  <p>Psicólogo – CRP 08/39834</p>
+  <a href="https://wa.me/5545991327493" class="botao" target="_blank">Agendar pelo WhatsApp</a>
 </header>
 
 <section>
@@ -45,14 +45,15 @@
 
 <section id="contato">
   <h2>Contato</h2>
-  <p>WhatsApp: <a href="https://wa.me/55SEUNUMERO" target="_blank">(00) 00000-0000</a></p>
-  <p>Email: contato@email.com</p>
+  <p>WhatsApp: <a href="https://wa.me/5545998208142" target="_blank">(45) 99820-8142</a></p>
+  <p>Email: 16nailliwpsi@gmail.com</p>
 </section>
 
 <footer>
-  <p>© 2026 – Dr(a). Seu Nome Completo | CRP 00/00000</p>
+  <p>© 2026 – Dr(a). Willian Valencio Silvestre | CRP 08/39834</p>
   <p><a href="politica-de-privacidade.html">Política de Privacidade</a></p>
 </footer>
 
 </body>
 </html>
+
