--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8">
+
+  <meta name="google-site-verification" content="MqjYz70Rl1q0w-tf7LcYGSZTubzy4F9qYx9reKljoHA" />
   
   <title>Psicólogo(a) em [Foz do Iguaçu-PR] | Atendimento Online e Presencial</title>
   <meta name="description" content="Psicólogo(a) em [Foz do Iguaçu]. Atendimento psicológico online e presencial com ética, sigilo e acolhimento. Agende sua consulta.">
@@ -57,6 +59,7 @@
 
 </body>
 </html>
+
 
 
 
