--- a/index.html
+++ b/index.html
@@ -3,58 +3,61 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Psicólogo clínico com atuação em psicoterapia individual de base psicanalítica. Atendimento online e presencial com acolhimento, ética e sigilo.">
+  <meta name="description" content="Psicólogo(a) em Foz do Iguaçu-PR. Atendimento psicológico individual, base psicanalítica, online e presencial.">
   <meta name="google-site-verification" content="MqjYz70Rl1q0w-tf7LcYGSZTubzy4F9qYx9reKljoHA" />
-  
-  <title>Psicólogo Dr. Willian Valencio | Psicoterapia Individual</title>
+  <title>Dr(a). Willian Valencio Silvestre | Psicólogo em Foz do Iguaçu</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<header>
-  <div class="header-content">
-    <h1>Dr. Willian Valencio Silvestre</h1>
-    <p>Psicólogo Clínico – CRP 08/39834</p>
-    <a href="https://wa.me/5545998208142" class="btn-agenda" target="_blank">Agende sua sessão</a>
-  </div>
-</header>
+  <header class="hero">
+    <div class="hero-content">
+      <h1>Dr(a). Willian Valencio Silvestre</h1>
+      <p>Psicólogo – CRP 08/39834 | Atendimento individual base psicanalítica</p>
+      <a href="https://wa.me/5545998208142" class="btn">Agendar pelo WhatsApp</a>
+    </div>
+  </header>
 
-<section id="sobre">
-  <h2>Sobre o Atendimento</h2>
-  <p>
-    Sou psicólogo clínico com atuação em <strong>psicoterapia individual de base psicanalítica</strong>.
-    Meu trabalho é pautado na ética, no sigilo e no acolhimento, oferecendo um espaço seguro
-    para reflexão, autoconhecimento e cuidado emocional. Cada pessoa é única e sua história
-    merece atenção singular.
-  </p>
-</section>
+  <section class="about">
+    <div class="container">
+      <h2>Sobre o Atendimento</h2>
+      <p>Sou psicólogo com experiência em atendimento online e presencial. O trabalho é fundamentado na ética, sigilo e acolhimento, respeitando a singularidade de cada pessoa. Meu foco é a psicoterapia individual com abordagem psicanalítica, auxiliando no autoconhecimento e desenvolvimento emocional.</p>
+    </div>
+  </section>
 
-<section id="servicos">
-  <h2>Serviços</h2>
-  <div class="servico-bloco">
-    <h3>Psicoterapia Individual</h3>
-    <p>Atendimento focado em suas necessidades emocionais, promovendo autoconhecimento e bem-estar.</p>
-  </div>
-  <div class="servico-bloco">
-    <h3>Atendimento Online</h3>
-    <p>Conforto e praticidade, sem perder o acolhimento e a qualidade da terapia presencial.</p>
-  </div>
-  <div class="servico-bloco">
-    <h3>Acolhimento Psicológico</h3>
-    <p>Espaço seguro para escuta ativa, expressão de sentimentos e construção de estratégias de cuidado.</p>
-  </div>
-</section>
+  <section class="services">
+    <div class="container">
+      <h2>Serviços</h2>
+      <ul>
+        <li>Psicoterapia individual</li>
+        <li>Atendimento psicológico online</li>
+        <li>Atendimento presencial em Foz do Iguaçu</li>
+        <li>Acolhimento emocional</li>
+      </ul>
+    </div>
+  </section>
 
-<section id="contato">
-  <h2>Contato</h2>
-  <p>WhatsApp: <a href="https://wa.me/5545998208142" target="_blank">(45) 99820-8142</a></p>
-  <p>Email: <a href="mailto:16nailliwpsi@gmail.com">16nailliwpsi@gmail.com</a></p>
-</section>
+  <section class="how-it-works">
+    <div class="container">
+      <h2>Como Funciona</h2>
+      <p>O atendimento é um espaço seguro para reflexão e cuidado com a saúde mental. As sessões seguem as normas do Conselho Federal de Psicologia e são estruturadas para apoiar cada pessoa de forma única.</p>
+    </div>
+  </section>
 
-<footer>
-  <p>© 2026 – Dr. Willian Valencio Silvestre | CRP 08/39834</p>
-  <p><a href="politica-de-privacidade.html">Política de Privacidade</a></p>
-</footer>
+  <section class="contact">
+    <div class="container">
+      <h2>Contato</h2>
+      <p>WhatsApp: <a href="https://wa.me/5545998208142">(45) 99820-8142</a></p>
+      <p>Email: 16nailliwpsi@gmail.com</p>
+    </div>
+  </section>
+
+  <footer>
+    <div class="container">
+      <p>© 2026 – Dr(a). Willian Valencio Silvestre | CRP 08/39834</p>
+      <p><a href="politica-de-privacidade.html">Política de Privacidade</a></p>
+    </div>
+  </footer>
 
 </body>
 </html>
