--- a/index.html
+++ b/index.html
@@ -3,57 +3,91 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Psicólogo(a) em Foz do Iguaçu-PR. Atendimento psicológico individual, base psicanalítica, online e presencial.">
-  <meta name="google-site-verification" content="MqjYz70Rl1q0w-tf7LcYGSZTubzy4F9qYx9reKljoHA" />
+  <meta name="description" content="Psicólogo(a) em Foz do Iguaçu-PR. Psicoterapia individual base psicanalítica, online e presencial.">
+  <meta name="google-site-verification" content="MqjYz70Rl1q0w-tf7LcYGSZTubzy4F9qYxJ3tk49sIV2sfCI-e6NT6-ravD7lDuhdVKxoCZtoQAvD_BwE" />
   <title>Dr(a). Willian Valencio Silvestre | Psicólogo em Foz do Iguaçu</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
+  <!-- Hero com banner simulado -->
   <header class="hero">
+    <div class="hero-overlay"></div>
     <div class="hero-content">
       <h1>Dr(a). Willian Valencio Silvestre</h1>
-      <p>Psicólogo – CRP 08/39834 | Atendimento individual base psicanalítica</p>
+      <p>Psicólogo – CRP 08/39834 | Psicoterapia individual base psicanalítica</p>
       <a href="https://wa.me/5545998208142" class="btn">Agendar pelo WhatsApp</a>
     </div>
   </header>
 
+  <!-- Sobre -->
   <section class="about">
-    <div class="container">
-      <h2>Sobre o Atendimento</h2>
-      <p>Sou psicólogo com experiência em atendimento online e presencial. O trabalho é fundamentado na ética, sigilo e acolhimento, respeitando a singularidade de cada pessoa. Meu foco é a psicoterapia individual com abordagem psicanalítica, auxiliando no autoconhecimento e desenvolvimento emocional.</p>
+    <div class="container about-flex">
+      <div class="about-text">
+        <h2>Sobre Mim</h2>
+        <p>Sou psicólogo(a) com experiência em atendimentos online e presenciais. Trabalho com psicoterapia individual baseada na psicanálise, promovendo autoconhecimento, acolhimento e desenvolvimento emocional. Cada pessoa é única, e meu objetivo é ajudá-la a encontrar equilíbrio e bem-estar.</p>
+      </div>
+      <div class="about-image">
+        <img src="https://via.placeholder.com/400x400/00bcd4/ffffff?text=Foto+do+Psicólogo" alt="Foto do Psicólogo">
+      </div>
     </div>
   </section>
 
+  <!-- Serviços -->
   <section class="services">
     <div class="container">
       <h2>Serviços</h2>
-      <ul>
-        <li>Psicoterapia individual</li>
-        <li>Atendimento psicológico online</li>
-        <li>Atendimento presencial em Foz do Iguaçu</li>
-        <li>Acolhimento emocional</li>
-      </ul>
+      <div class="services-grid">
+        <div class="service-card">
+          <img src="https://via.placeholder.com/100x100/00bcd4/ffffff?text=Individual" alt="Psicoterapia Individual">
+          <h3>Psicoterapia Individual</h3>
+          <p>Atendimento personalizado focado nas suas necessidades e desenvolvimento emocional.</p>
+        </div>
+        <div class="service-card">
+          <img src="https://via.placeholder.com/100x100/00bcd4/ffffff?text=Online" alt="Atendimento Online">
+          <h3>Atendimento Online</h3>
+          <p>Consultas via vídeo chamada, garantindo segurança, sigilo e conforto no seu lar.</p>
+        </div>
+        <div class="service-card">
+          <img src="https://via.placeholder.com/100x100/00bcd4/ffffff?text=Presencial" alt="Atendimento Presencial">
+          <h3>Atendimento Presencial</h3>
+          <p>Consultas presenciais em Foz do Iguaçu-PR com ambiente acolhedor e seguro.</p>
+        </div>
+        <div class="service-card">
+          <img src="https://via.placeholder.com/100x100/00bcd4/ffffff?text=Acolhimento" alt="Acolhimento Emocional">
+          <h3>Acolhimento Emocional</h3>
+          <p>Espaço seguro para lidar com emoções, ansiedade, conflitos internos e autoestima.</p>
+        </div>
+      </div>
     </div>
   </section>
 
+  <!-- Como Funciona -->
   <section class="how-it-works">
-    <div class="container">
-      <h2>Como Funciona</h2>
-      <p>O atendimento é um espaço seguro para reflexão e cuidado com a saúde mental. As sessões seguem as normas do Conselho Federal de Psicologia e são estruturadas para apoiar cada pessoa de forma única.</p>
+    <div class="container how-flex">
+      <div class="how-image">
+        <img src="https://via.placeholder.com/400x300/00bcd4/ffffff?text=Como+Funciona" alt="Como Funciona">
+      </div>
+      <div class="how-text">
+        <h2>Como Funciona</h2>
+        <p>As sessões são um espaço seguro para reflexão, autoconhecimento e cuidado com a saúde mental. Trabalhamos dentro das normas do Conselho Federal de Psicologia, respeitando o ritmo e as necessidades de cada pessoa.</p>
+      </div>
     </div>
   </section>
 
+  <!-- Contato -->
   <section class="contact">
     <div class="container">
       <h2>Contato</h2>
       <p>WhatsApp: <a href="https://wa.me/5545998208142">(45) 99820-8142</a></p>
-      <p>Email: 16nailliwpsi@gmail.com</p>
+      <p>Email: <a href="mailto:16nailliwpsi@gmail.com">16nailliwpsi@gmail.com</a></p>
+      <a href="https://wa.me/5545998208142" class="btn">Agende sua Consulta</a>
     </div>
   </section>
 
+  <!-- Footer -->
   <footer>
-    <div class="container">
+    <div class="container footer-container">
       <p>© 2026 – Dr(a). Willian Valencio Silvestre | CRP 08/39834</p>
       <p><a href="politica-de-privacidade.html">Política de Privacidade</a></p>
     </div>
